syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "Travely.SupplierManager.Grpc";

package supplier;

service SupplierProto {
  rpc CreateSupplier (Supplier) returns (SupplierResponse);
  rpc GetSuppliers(GetSuppliersRequest) returns (Suppliers);
  rpc DeleteSupplier (DeleteSupplierRequest) returns (SupplierResponse);
  rpc EditSupplier (Supplier) returns (SupplierResponse);
}

message Supplier {
  google.protobuf.Int64Value id = 1;
  string name = 2;
  string type = 3;
}

message SupplierResponse {
  ResponseStatus status = 1;
  string message = 2;
}

message GetSuppliersRequest {
  int64 agencyId = 1;
}

message DeleteSupplierRequest {
  int64 supplierId = 1;
}

message Suppliers {
  repeated Supplier Suppliers = 1;
}

enum ResponseStatus {
  RESPONSESTATUS_FAILED = 0;
  RESPONSESTATUS_SUCCESS = 1;
}
